# replit-lifeboat

./: .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml  hpa.yaml  ingress.yaml  replit-takeout-ingress.yaml  service.yaml  test.sh
.github/workflows/: docker-image.yml
examples/: airtable.rs  email.rs  full_flow.rs  repls.rs  styx.rs  upload.rs  zip.rs
src/: airtable.rs  crosisdownload.rs  email.rs  lib.rs  main.rs  managed_queue.rs  r2.rs  replit_graphql.rs
src/crosisdownload/: metadata.rs  mod.rs  util.rs
src/email/: emails.rs  mod.rs  test_routes.rs
src/graphql/: profilerepls-query.graphql  quickuser-query.graphql  replfolders-query.graphql  repls-query.graphql  schema 7.graphql  user-query.graphql
src/replit/: mod.rs  repls.rs
templates/: all_success.html  base.html  greet.html  partial_success.html  test.html
www/: astro.config.mjs  bun.lockb  package.json
www/src/pages/: [__replauth].astro  index.astro
www/src/pages/api/: signup.ts
