[package]
name = "replit-takeout"
version = "0.1.0"
edition = "2021"
authors = ["Ben Dixon <malted@malted.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
# crosis = { path = "../../replit/rust-crosis", version = "0.2.0", default-features = false, features = ["chan_buf", "serde"]  }
crosis = { git = "https://github.com/PotentialStyx/crosis-rust.git", version = "0.2.0", default-features = false, features = ["chan_buf", "serde"]  }
env_logger = "0.11.5"
graphql_client = { version = "0.14.0", features = ["reqwest", "reqwest-blocking"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking", "cookies", "json"] }
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["fs", "macros", "net", "rt-multi-thread"] }
