[package]
name = "replit-takeout"
version = "0.3.1"
edition = "2021"
authors = ["Ben Dixon <malted@malted.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
crc32fast = "1.4.2"
crosis = { git = "https://github.com/PotentialStyx/crosis-rust.git", version = "0.3.3", default-features = false, features = ["chan_buf", "serde", "notif_on_close"]  }
airtable-api = "0.1.36"
dotenv = "0.15.0"
env_logger = "0.11.5"
flume = "0.11.0"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls"] }
kanal = { version = "0.1.0-pre8", default-features = false, features = ["async"] }
git2 = "0.19.0"
log = "0.4.22"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["blocking", "cookies", "json"] }
ropey = "1.6.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.208"
serde_json = "1.0.125"
time = "0.3.36"
tokio = { version = "1.39.3", features = ["fs", "macros", "net", "rt-multi-thread"] }
openssl = { version = "0.10.59", features = ["vendored"] }
chrono = "0.4.38"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate", "async-compression"] }
async-compression = { version = "0.4.12" }
aws-region = "0.25.4"
rust-s3 = "0.34.0"
futures = "0.3.30"
askama = "0.12.1"
